<resources>
    <string name="app_name">JuliFit</string>
    <string name="titleJuliFit">Juli Fit</string>
    <string name="exercises">Exercises</string>
    <string name="trainings">Trainings</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="titleExerciseActivity">Exercises</string>
    <string name="loginTitle">Authentication</string>
    <string name="registerTitle">Registration</string>
    <string name="userIdText">User</string>
    <string name="passwordText">Password</string>
    <string name="enterId">Enter Your e-mail</string>
    <string name="enterPassword">Enter Your password</string>
    <string name="Sign_in">Sign in</string>
    <string name="Registration">Register</string>
    <string name="reenterPassword">Enter Your password again</string>
    <string name="back">Back</string>
    <string name="rememberMe">Remember me</string>
    <string name="signOut">Sign out</string>
    <string name="legsEx">Legs</string>
    <string name="backEx">Back</string>
    <string name="chestEx">Chest</string>
    <string name="shouldersEx">Shoulders</string>
    <string name="armsEx">Arms</string>
    <string name="homeScreen">Home</string>
    <string name="titleTraining">Training</string>
    <string name="intenseWorkoutText">High intensity</string>
    <string name="strengthText">Strength</string>
    <string name="enduranceText">Endurance</string>
    <string name="LoginPictureDescription">Login Picture for sign in screen</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_training">Training</string>
    <string name="logoutButtonText">Sign Out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playvideo">Atskaņot video</string>
    <string name="EnterName">Enter Your name</string>
    <string name="enterEmail">Enter e-mail</string>
    <string name="enterValidEmail">Enter valid email</string>
    <string name="enterName">Enter Your name</string>
    <string name="passwordShouldBe">Password should be at least 6 characters long</string>
    <string name="userRegistered">User was registered</string>
    <string name="title_userSettings">User settings</string>
    <string name="userAlreadyRegistered">User already exists</string>
    <string name="standardHomeText">Welcome to JuliFit! Let\'s get fit together!</string>
    <string name="registerPushed">Opening registration</string>
    <string name="signingIn">Signing in</string>
    <string name="userSaved">User saved</string>
    <string name="userLoaded">User loaded</string>
    <string name="UserEmailTitle">Your e-mail</string>
    <string name="ChangePassword">Change Password</string>
    <string name="confirmChanges">Confirm</string>
    <string name="enterNewPassword">Enter a new password</string>
    <string name="enterCurrentPassword">Enter current password</string>
    <string name="SaveChanges">Save changes</string>
    <string name="yourName">Your Name</string>
    <string name="repeatNewPassword">Repeat new password</string>
    <string name="passwordsNotMatching">Passwords do not match</string>
    <string name="passwordUpdated">Password was updated</string>
    <string name="nameWasUpdated">User name was updated</string>
    <string name="nameWasNotUpdated">Failed to update name</string>
    <string name="LegExercises">Leg Exercises</string>
    <string name="BackExercises">Back Exercises</string>
    <string name="CoreExercises">Core Exercises</string>
    <string name="ChestExercises">Chest Exercises</string>
    <string name="ShouldersExercises">Shoulders Exercises</string>
    <string name="ArmsExercises">Arm Exercises</string>
    <string name="OtherExercises">Other</string>
    <string name="attribution">\"Icons made by Freepik from www.flaticon.com\"</string>
    <string name="error">Encountered error!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
