<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    >

    <TextView
        android:id="@+id/loginTitleTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/registerTitle"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/loginPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/loginTitleTextview"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/LoginPictureDescription"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/julifitdefaultlogo" />


    <EditText
        android:id="@+id/userIdLogin"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:hint="@string/enterId"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/userIdPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIdLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:autofillHints=""
        android:hint="@string/enterPassword"
        android:inputType="textWebPassword" />

    <EditText
        android:id="@+id/userIdPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIdLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:autofillHints=""
        android:hint="@string/reenterPassword"
        android:inputType="textWebPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIdLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:background="@color/colorPrimary"
        android:text="@string/Registration" />

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/back" />

</RelativeLayout>