<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutExercises"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textViewExercisesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titleExerciseActivity"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textViewAttribution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExercisesTitle">

        <TableRow
            android:id="@+id/rowLegs"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewLegsTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/LegExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonLegs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/legsicon"
                app:borderWidth="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewBackTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/BackExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/backicon"
                app:borderWidth="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowCore"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewCoreTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/CoreExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonCore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/coreicon"
                app:borderWidth="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowChest"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewChestTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ChestExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonChest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/chesticon"
                app:borderWidth="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowShoulders"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewShouldersTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ShouldersExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonShoulders"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/shouldericon"
                app:borderWidth="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowArms"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewArmsTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/ArmsExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonArms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/armicon"
                app:borderWidth="4dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rowOther"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewOtherTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/OtherExercises"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonOther"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/othericon"
                app:borderWidth="4dp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textViewAttribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/attribution"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableExercises" />


</androidx.constraintlayout.widget.ConstraintLayout>